Various fixes: -removed dependency on args4j -fixed javadoc generation in codemodel to escape special characters -fully restored "old" com.sun.xml.bind bundles -added missing JPMS descriptors -updated JPMS definitions
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>