@@ -79,11 +79,6 @@
             <artifactId>istack-commons-tools</artifactId>
         </dependency>
         <dependency>
-            <groupId>args4j</groupId>
-            <artifactId>args4j</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.apache.ant</groupId>
             <artifactId>ant</artifactId>
             <optional>true</optional>
@@ -157,8 +152,8 @@
                     <forkCount>1</forkCount>
                     <reuseForks>true</reuseForks>
                     <argLine>
-                        --add-exports com.sun.tools.xjc/com.sun.tools.xjc.outline=ALL-UNNAMED
-                        --add-opens com.sun.tools.xjc/com.sun.tools.xjc.addon.code_injector=ALL-UNNAMED
+                        --add-exports org.glassfish.jaxb.xjc/com.sun.tools.xjc.outline=ALL-UNNAMED
+                        --add-opens org.glassfish.jaxb.xjc/com.sun.tools.xjc.addon.code_injector=ALL-UNNAMED
                         -Djdk.attach.allowAttachSelf
                     </argLine>
                 </configuration>
@@ -206,11 +201,9 @@
                         <configuration>
                             <compilerArgs>
                                 <arg>--add-reads</arg>
-                                <arg>com.sun.tools.xjc=ALL-UNNAMED</arg>
+                                <arg>org.glassfish.jaxb.xjc=ALL-UNNAMED</arg>
                                 <arg>--add-reads</arg>
                                 <arg>com.sun.istack.tools=ALL-UNNAMED</arg>
-                                <arg>--add-reads</arg>
-                                <arg>com.sun.tools.xjc=ALL-UNNAMED</arg>
                             </compilerArgs>
                         </configuration>
                     </execution>
@@ -236,11 +229,9 @@
                 <configuration>
                     <additionalJOptions>
                         <additionalJOption>--add-reads</additionalJOption>
-                        <additionalJOption>com.sun.tools.xjc=ALL-UNNAMED</additionalJOption>
+                        <additionalJOption>org.glassfish.jaxb.xjc=ALL-UNNAMED</additionalJOption>
                         <additionalJOption>--add-reads</additionalJOption>
                         <additionalJOption>com.sun.istack.tools=ALL-UNNAMED</additionalJOption>
-                        <additionalJOption>--add-reads</additionalJOption>
-                        <additionalJOption>com.sun.tools.xjc=ALL-UNNAMED</additionalJOption>
                     </additionalJOptions>
                 </configuration>
             </plugin>
